Add wrappers to run JaConTeBe